--- a/mobile-website-media-queries/style.css
+++ b/mobile-website-media-queries/style.css
@@ -18,6 +18,24 @@ p {
     /*text-align: justify;*/
 }
 
+.footer-left {
+    background-color: aqua;
+    width: 200px;
+}
+
+.footer-right {
+    background-color: coral;
+    width: 200px;
+    text-align: right;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
 /* Media query - jos koko on alle 820px */
 @media (max-width: 820px) {
    
@@ -37,6 +55,14 @@ p {
 
     img {
         display: none;
+    }
+
+    footer {
+       flex-direction: column; 
+    }
+
+    .footer-right {
+        text-align: left;
     }
 
 }
